--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "buildCommand": "npm start"
+  "builds": [{ "src": "app.js", "use": "@now/node" }],
+  "routes": [{ "src": "(.*)", "dest": "app.js" }]
 }
